--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,14 @@
 {
-    "presets": [ "es2015-riot" ]
+    "presets": [
+        [
+          "@babel/preset-env",
+          {
+            "modules": false,
+            "targets": [
+              // wathever you need to support
+              "last 2 versions"
+            ]
+          }
+        ]
+      ]
 }
