--- a/package.json
+++ b/package.json
@@ -38,6 +38,11 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "riot": "^7.0.7"
+    "@riotjs/observable": "^4.1.1",
+    "axios": "^1.1.3",
+    "lodash": "^4.17.21",
+    "riot": "^7.0.7",
+    "svg-url-loader": "^8.0.0",
+    "sweetalert2": "^11.6.5"
   }
 }
