--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@riotjs/observable": "^4.1.1",
     "axios": "^1.1.3",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "riot": "^7.0.7",
     "svg-url-loader": "^8.0.0",
     "sweetalert2": "^11.6.5"
