--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
   },
   "homepage": "https://github.com/rohmanahmad/riotjs-web-template#readme",
   "devDependencies": {
-    "@babel/preset-env": "^7.20.2",
     "@riotjs/compiler": "^6.4.1",
     "@riotjs/hot-reload": "^6.0.1",
     "@riotjs/lazy": "^2.0.2",
@@ -41,9 +40,12 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "bootstrap": "4.0.0",
     "idb-keyval": "^6.2.0",
+    "jquery": "^3.6.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "popper.js": "^1.16.1",
     "riot": "^7.0.7",
     "svg-url-loader": "^8.0.0",
     "sweetalert2": "^11.6.5"
